[package]
name = "commentective"
version = "0.8.1"
description = "CLI tool to locate comments and commented out code in your source code"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["command-line-tool", "cli", "rust", "comments"]

documentation = "https://github.com/simeg/commentective/blob/master/README.md"
homepage = "https://github.com/simeg/commentective"
repository = "https://github.com/simeg/commentective"
readme = "README.md"
license = "MIT"
edition = "2018"

exclude = [
    "tests/*",
    "scripts/*",
]

[badges]
travis-ci = { repository = "simeg/commentective" }
codecov = { repository = "simeg/commentective", branch = "master", service = "github" }

[dependencies]
clap = "3.0.0-beta.2"
colored = "2.0.0"
console = "0.14.1"
rayon = "1.5.1"

[dev-dependencies]
tempfile = "3.2.0"
assert_cmd = "1.0.7"
predicates = "2.0.0"
