[package]
name = "commentective"
version = "0.8.1"
description = "CLI tool to locate comments and commented out code in your source code"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["command-line-tool", "cli", "rust", "comments"]

documentation = "https://github.com/simeg/commentective/blob/master/README.md"
homepage = "https://github.com/simeg/commentective"
repository = "https://github.com/simeg/commentective"
readme = "README.md"
license = "MIT"
edition = "2021"

exclude = [
    "tests/*",
]

[badges]
travis-ci = { repository = "simeg/commentective" }
codecov = { repository = "simeg/commentective", branch = "master", service = "github" }

[features]
# this effectively enable the feature `no-color` of colored when testing with
# `cargo test --feature dumb_terminal`
dumb_terminal = ["colored/no-color"]

[dependencies]
clap = { version = "3.1.8", default-features = false, features = ["std", "cargo"] }
colored = "2.0.0"
console = "0.15.0"
rayon = "1.5.1"

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"
predicates = "2.1.1"
